--- a/index.html
+++ b/index.html
@@ -60,27 +60,39 @@
         }
 
         /* Print Layout Styles */
+        /* Print Layout Styles */
         @media print {
-            body * {
-                visibility: hidden;
+            body {
+                background: white;
+                margin: 0;
+                padding: 0;
             }
 
-            #print-area,
+            /* Hide all top-level elements except the print area */
+            body>*:not(#print-area) {
+                display: none !important;
+            }
+
+            /* Force print area to be visible and behave normally */
+            #print-area {
+                display: block !important;
+                position: relative;
+                width: 100%;
+                height: 100%;
+                visibility: visible;
+                background: white;
+                padding: 0;
+            }
+
+            /* Ensure text colors are correct for print */
             #print-area * {
                 visibility: visible;
-            }
-
-            #print-area {
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 100%;
-                background: white;
-                padding: 40px;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
             }
 
             @page {
-                margin: 0;
+                margin: 0.5cm;
                 size: auto;
             }
         }
@@ -98,7 +110,7 @@
                     O</div>
                 <h1 class="text-2xl font-bold text-gray-800">Oticon Clinical Comparator <span
                         class="font-light text-gray-500">Intent & Own SI</span> <span
-                        class="text-xs text-gray-400 ml-2 align-top">v1.2.2</span></h1>
+                        class="text-xs text-gray-400 ml-2 align-top">v1.2.3</span></h1>
             </div>
 
             <!-- Button Container -->
@@ -440,19 +452,19 @@
                             <tr>
                                 <th class="px-2 py-3">Feature</th>
                                 <th class="px-1 py-3 text-center bg-gray-100 border-b-4 border-oticon-pink" id="col-1">
-                                    <span id="head-1-title">Level 1</span><br><span
+                                    <span id="head-1-title">Intent 1</span><br><span
                                         class="text-[10px] text-gray-500 normal-case" id="head-1-sub">Premium</span>
                                 </th>
                                 <th class="px-1 py-3 text-center" id="col-2">
-                                    <span id="head-2-title">Level 2</span><br><span
+                                    <span id="head-2-title">Intent 2</span><br><span
                                         class="text-[10px] text-gray-500 normal-case" id="head-2-sub">Advanced</span>
                                 </th>
                                 <th class="px-1 py-3 text-center" id="col-3">
-                                    <span id="head-3-title">Level 3</span><br><span
+                                    <span id="head-3-title">Intent 3</span><br><span
                                         class="text-[10px] text-gray-500 normal-case" id="head-3-sub">Standard</span>
                                 </th>
                                 <th class="px-1 py-3 text-center" id="col-4">
-                                    <span id="head-4-title">Level 4</span><br><span
+                                    <span id="head-4-title">Intent 4</span><br><span
                                         class="text-[10px] text-gray-500 normal-case" id="head-4-sub">Essential</span>
                                 </th>
                                 <th class="px-1 py-3 text-center hidden" id="col-5">
