Change Premium label to Ultimate & Bump v1.2.4

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     O</div>
                 <h1 class="text-2xl font-bold text-gray-800">Oticon Clinical Comparator <span
                         class="font-light text-gray-500">Intent & Own SI</span> <span
-                        class="text-xs text-gray-400 ml-2 align-top">v1.2.3</span></h1>
+                        class="text-xs text-gray-400 ml-2 align-top">v1.2.4</span></h1>
             </div>
 
             <!-- Button Container -->
@@ -453,7 +453,7 @@
                                 <th class="px-2 py-3">Feature</th>
                                 <th class="px-1 py-3 text-center bg-gray-100 border-b-4 border-oticon-pink" id="col-1">
                                     <span id="head-1-title">Intent 1</span><br><span
-                                        class="text-[10px] text-gray-500 normal-case" id="head-1-sub">Premium</span>
+                                        class="text-[10px] text-gray-500 normal-case" id="head-1-sub">Ultimate</span>
                                 </th>
                                 <th class="px-1 py-3 text-center" id="col-2">
                                     <span id="head-2-title">Intent 2</span><br><span
@@ -696,7 +696,7 @@
 
                 // Set Headers
                 setHeaders([
-                    { title: "Intent 1", sub: "Premium" },
+                    { title: "Intent 1", sub: "Ultimate" },
                     { title: "Intent 2", sub: "Advanced" },
                     { title: "Intent 3", sub: "Standard" },
                     { title: "Intent 4", sub: "Essential" }
@@ -721,8 +721,8 @@
 
                 // Set Headers
                 setHeaders([
-                    { title: "Zeal 1", sub: "Premium" },
-                    { title: "Own SI 1", sub: "Premium" },
+                    { title: "Zeal 1", sub: "Ultimate" },
+                    { title: "Own SI 1", sub: "Ultimate" },
                     { title: "Own SI 2", sub: "Advanced" },
                     { title: "Own SI 3", sub: "Standard" },
                     { title: "Own SI 4", sub: "Essential" }
