--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     O</div>
                 <h1 class="text-2xl font-bold text-gray-800">Oticon Clinical Comparator <span
                         class="font-light text-gray-500">Intent & Own SI</span> <span
-                        class="text-xs text-gray-400 ml-2 align-top">v1.2.4</span></h1>
+                        class="text-xs text-gray-400 ml-2 align-top">v1.2.5</span></h1>
             </div>
 
             <!-- Button Container -->
@@ -457,7 +457,7 @@
                                 </th>
                                 <th class="px-1 py-3 text-center" id="col-2">
                                     <span id="head-2-title">Intent 2</span><br><span
-                                        class="text-[10px] text-gray-500 normal-case" id="head-2-sub">Advanced</span>
+                                        class="text-[10px] text-gray-500 normal-case" id="head-2-sub">Premium</span>
                                 </th>
                                 <th class="px-1 py-3 text-center" id="col-3">
                                     <span id="head-3-title">Intent 3</span><br><span
@@ -697,7 +697,7 @@
                 // Set Headers
                 setHeaders([
                     { title: "Intent 1", sub: "Ultimate" },
-                    { title: "Intent 2", sub: "Advanced" },
+                    { title: "Intent 2", sub: "Premium" },
                     { title: "Intent 3", sub: "Standard" },
                     { title: "Intent 4", sub: "Essential" }
                 ]);
@@ -723,7 +723,7 @@
                 setHeaders([
                     { title: "Zeal 1", sub: "Ultimate" },
                     { title: "Own SI 1", sub: "Ultimate" },
-                    { title: "Own SI 2", sub: "Advanced" },
+                    { title: "Own SI 2", sub: "Premium" },
                     { title: "Own SI 3", sub: "Standard" },
                     { title: "Own SI 4", sub: "Essential" }
                 ]);
